--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="./assets/images/skills/subhojyotidasDevOps2024.pdf" target="_blank" class="btn"><span>Resume</span>
+          <a href="./assets/images/skills/Subhojyotidas2024DevOps.pdf" target="_blank" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
@@ -193,29 +193,29 @@
       <div class="project-card">
         <h3>E-Commerce Website Deployment with AWS DevOps </h3>
         <p>Deployed an e-commerce website using AWS CodeBuild, CodePipeline, and CodeDeploy, achieving a 40% reduction in deployment time through seamless CI/CD integration. The frontend was hosted on Amazon S3 with CloudFront, secured using AWS Certificate Manager (ACM) for enhanced global accessibility and robust security. The backend was managed on AWS Elastic Kubernetes Service (EKS) with Amazon RDS, ensuring scalability, high availability, and efficient performance.</p>
-        <a href="#" class="view-btn">View Project</a>
+        <a href="https://github.com/SubhojyotiDas3/Ecommerce-AWS" class="view-btn">View Project</a>
       </div>
       <div class="project-card">
         <h3>Three-Tier Camping Web Application with Dev/Prod Workflow</h3>
         <p>Designed and deployed a three-tier camping application using Docker, Kubernetes, and MongoDB, ensuring seamless scalability and reliability. Implemented Dev/Production workflows with Jenkins CI/CD pipelines, reducing deployment inconsistencies by 40%. Integrated SonarQube for real-time code quality analysis and utilized Docker Hub for efficient image management.</p>
-        <a href="#" class="view-btn">View Project</a>
+        <a href="https://github.com/SubhojyotiDas3/camping-project" class="view-btn">View Project</a>
       </div>
       <div class="project-card">
         <h3>Serverless Three-Tier HRMS Application Deployment with AWS</h3>
         <p>Deployed a serverless three-tier HRMS application using AWS Lambda, S3, and DynamoDB, achieving 30% faster query response times. Utilized API Gateway to ensure smooth data flow between the frontend and backend for optimal performance. Configured Route 53 and CloudFront to enhance global reach and improve website load times by 50%.</p>
-        <a href="#" class="view-btn">View Project</a>
+        <a href="https://github.com/SubhojyotiDas3/HRMS-Serverless-AWS" class="view-btn">View Project</a>
       </div>
       <div class="project-card">
         <h3>Deployed an E-Commerce as Microservices With Jenkins Multibranch Pipeline</h3>
         <p>Hosted an e-commerce website as microservices using Jenkins multi-branch CI/CD pipelines, reducing deployment time by 45%. Containerized and deployed all microservices with Docker on AWS EKS, ensuring scalability and high availability. Streamlined orchestration and management with AWS EKS, enabling a robust microservices infrastructure.</p>
-        <a href="#" class="view-btn">View Project</a>
+        <a href="https://github.com/SubhojyotiDas3/Ecommerce-Open" class="view-btn">View Project</a>
       </div>
       <div class="project-card">
         <h3>Corporate Style CICD with Multiple Stages</h3>
         <p>Implemented a corporate-style CI/CD pipeline with multiple stages for code quality, testing, and
           deployment. Enhanced automation and reliability for seamless application delivery across development,
           staging, and production environments.</p>
-        <a href="#" class="view-btn">View Project</a>
+        <a href="https://github.com/SubhojyotiDas3/Micro-services" class="view-btn">View Project</a>
       </div>
       <div class="project-card">
         <h3>Corporate Style CICD with Multiple Stages</h3>
